# wom-portal-django

./: .env.template  .gitignore  Makefile  pyproject.toml
app/: asgi.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
app/cases/: apps.py
app/patients/: apps.py  models.py
app/templates/: 404.html  base.html  delete.html  footer.html  form.html  index.html  navbar.html
app/templates/users/: create.html  delete.html  login.html  update.html  users.html
app/templates/workplaces/: create.html  delete.html  update.html  workplaces.html
app/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_patronymic_alter_user_email_and_more.py
app/workplaces/: apps.py  forms.py  models.py  urls.py  views.py
app/workplaces/migrations/: 0001_initial.py  0002_alter_workplace_creator.py  0003_workplace_profile_workplace_type.py
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
