[tool.poetry]
name = "wom-django"
version = "0.1.0"
description = ""
authors = ["Shilov Ilia <shilov.spike2250@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"
django-bootstrap5 = "^25.1"
dj-database-url = "^2.3.0"
django-filter = "^25.1"
psycopg2-binary = "^2.9.10"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
flake8 = "^7.2.0"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
